@@ -19,6 +19,7 @@
     * Max. number of queued connections on status sockets is configurable now
     * check_mkevents: new option -a for ignoring acknowledged events
     * New sub-permissions for changing comment and contact while updating an event
+    * New button for generating test events directly via WATO
 
     Multisite:
     * Enable automation login with _username= and _secret=, while
